--- a/week2/front_end/server/package.json
+++ b/week2/front_end/server/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.17.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
@@ -19,6 +19,7 @@
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "validator": "^7.0.0"
   }
 }
